--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Pose Detection</title>
+  <title>Pose Detection + Record</title>
 
   <style>
     html, body {
@@ -58,13 +58,10 @@
     let poseLandmarker = null;
     let running = false;
 
-    /* ---------------- 工具函数 ---------------- */
+    /* ================= 工具函数 ================= */
 
     function toCanvas(p) {
-      return {
-        x: p.x * canvas.width,
-        y: p.y * canvas.height
-      };
+      return { x: p.x * canvas.width, y: p.y * canvas.height };
     }
 
     function calcAngle(a, b, c) {
@@ -87,26 +84,19 @@
       ctx.stroke();
     }
 
-    /* ---------------- 摄像头优先启动 ---------------- */
-
+    /* ================= 摄像头 ================= */
 
     async function startCamera() {
-      console.time("camera");
       const stream = await navigator.mediaDevices.getUserMedia({
         video: {
           facingMode: "environment",
-          width: { ideal: 1280 },   // ⭐ 降低分辨率 = 更快
-          height: { ideal: 720 },
-          // width: { ideal: 1920 },
-          // height: { ideal: 1080 },
-          focusMode: "continuous"
+          width: { ideal: 1280 },
+          height: { ideal: 720 }
         },
         audio: false
       });
 
       video.srcObject = stream;
-
-      await new Promise(r => video.onloadedmetadata = r);
       await video.play();
 
       canvas.width = video.videoWidth;
@@ -114,26 +104,18 @@
 
       running = true;
       tip.textContent = "Camera ready";
-
-      console.timeEnd("camera");
     }
 
-    /* ---------------- 后台加载 Pose ---------------- */
+    /* ================= Pose 初始化 ================= */
 
     async function initPose() {
-      console.time("pose");
-
       const vision = await FilesetResolver.forVisionTasks(
-        // "/mediapipe/wasm"   // ⭐ 本地 wasm 目录
-        //"https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm"
         "/mediapipe/tasks-vision/wasm"
       );
 
       poseLandmarker = await PoseLandmarker.createFromOptions(vision, {
         baseOptions: {
-          modelAssetPath: 
-          // "https://storage.googleapis.com/mediapipe-models/pose_landmarker/pose_landmarker_lite/float16/1/pose_landmarker_lite.task",
-          "/mediapipe/model/pose_landmarker_lite.task",
+          modelAssetPath: "/mediapipe/model/pose_landmarker_lite.task",
           delegate: "GPU"
         },
         runningMode: "VIDEO",
@@ -141,13 +123,12 @@
       });
 
       tip.textContent = "Pose ready";
-      console.timeEnd("pose");
     }
 
-    /* ---------------- AI 主循环（限帧） ---------------- */
+    /* ================= AI 主循环 ================= */
 
     let lastAiTime = 0;
-    const AI_INTERVAL = 1000 / 15; // ⭐ 15 FPS
+    const AI_INTERVAL = 1000 / 15;
 
     function loop(ts) {
       requestAnimationFrame(loop);
@@ -163,11 +144,11 @@
       drawPose(result.landmarks[0]);
     }
 
-    /* ---------------- 绘制骨骼 ---------------- */
+    /* ================= 绘制骨骼 ================= */
 
     function drawPose(lm) {
       ctx.save();
-      ctx.strokeStyle = "#4ec9b0";
+      ctx.strokeStyle = "#00ff00";
       ctx.fillStyle = "#ffffff";
       ctx.lineWidth = 3;
 
@@ -182,12 +163,11 @@
       );
 
       lm.forEach(p => drawPoint(toCanvas(p)));
-      // ⭐ 四个关节角度
-      drawAngle(lm[11], lm[13], lm[15]); // 左肘
-      drawAngle(lm[12], lm[14], lm[16]); // 右肘
-      drawAngle(lm[23], lm[25], lm[27]); // 左膝
-      drawAngle(lm[24], lm[26], lm[28]); // 右膝
-    
+
+      drawAngle(lm[11], lm[13], lm[15]);
+      drawAngle(lm[12], lm[14], lm[16]);
+      drawAngle(lm[23], lm[25], lm[27]);
+      drawAngle(lm[24], lm[26], lm[28]);
 
       ctx.restore();
     }
@@ -199,10 +179,58 @@
       ctx.fillText(`${angle}°`, p.x + 6, p.y - 6);
     }
 
-    /* ---------------- 启动 ---------------- */
+    /* ================= 屏幕录制（Flutter 调用） ================= */
 
-    startCamera();   // ⭐ 不等待，先亮画面
-    initPose();      // ⭐ 后台慢慢加载
+    let mediaRecorder = null;
+    let recordChunks = [];
+
+    window.startRecord = function () {
+      if (mediaRecorder?.state === "recording") return;
+
+      const stream = canvas.captureStream(30);
+
+      mediaRecorder = new MediaRecorder(stream, {
+        mimeType: "video/webm;codecs=vp9"
+      });
+
+      recordChunks = [];
+
+      mediaRecorder.ondataavailable = e => {
+        if (e.data.size > 0) recordChunks.push(e.data);
+      };
+
+      mediaRecorder.onstart = () => {
+        console.log("🎥 Recording start");
+      };
+
+      mediaRecorder.onstop = () => {
+        const blob = new Blob(recordChunks, { type: "video/webm" });
+        const url = URL.createObjectURL(blob);
+
+        // 回调 Flutter
+        if (window.flutter_inappwebview) {
+          window.flutter_inappwebview.callHandler(
+            "onRecordFinish",
+            url
+          );
+        }
+
+        console.log("🛑 Recording stop", url);
+      };
+
+      mediaRecorder.start();
+    };
+
+    window.stopRecord = function () {
+      if (mediaRecorder?.state === "recording") {
+        mediaRecorder.stop();
+      }
+    };
+
+    /* ================= 启动 ================= */
+
+    startCamera();
+    initPose();
     requestAnimationFrame(loop);
   </script>
 </body>
