--- a/index.html
+++ b/index.html
@@ -6,104 +6,49 @@
 		<title>Pose Pro Fixed</title>
 
 		<style>
-			html,
-			body {
-				margin: 0;
-				padding: 0;
-				width: 100%;
-				height: 100%;
-				background: #000;
-				overflow: hidden;
-			}
-
-			video {
-				position: absolute;
-				inset: 0;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				z-index: 1; /* 确保视频在底层 */
-				background: #000;
-			}
-
-			canvas {
-				position: absolute;
-				inset: 0;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				z-index: 2; /* 画布在视频上方 */
-				pointer-events: none; /* 防止画布阻挡点击 */
-			}
-
-			.mirror {
-				transform: scaleX(-1);
-				-webkit-transform: scaleX(-1);
-			}
-
+			html, body { margin: 0; padding: 0; width: 100%; height: 100%; background: #000; overflow: hidden; }
+			video { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; z-index: 1; background: #000; }
+			canvas { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; z-index: 2; pointer-events: none; }
+			.mirror { transform: scaleX(-1); -webkit-transform: scaleX(-1); }
 			#tip {
-				position: absolute;
-				top: 12px;
-				left: 12px;
-				z-index: 10;
-				color: #4ec9b0;
-				background: rgba(0, 0, 0, 0.7);
-				padding: 6px 10px;
-				border-radius: 4px;
-				font-family: monospace;
-				font-size: 12px;
+				position: absolute; top: 12px; left: 12px; z-index: 10;
+				color: #4ec9b0; background: rgba(0, 0, 0, 0.7);
+				padding: 6px 10px; border-radius: 4px;
+				font-family: monospace; font-size: 12px;
 			}
 		</style>
 	</head>
 
 	<body>
-		<div id="tip">Initializing Camera...</div>
+		<div id="tip">System Initializing...</div>
 		<video id="video" autoplay playsinline muted></video>
 		<canvas id="canvas"></canvas>
 
 		<script type="module">
-			import {
-				PoseLandmarker,
-				FilesetResolver
-			}
-			from "/mediapipe/tasks-vision/vision_bundle.js";
+			import { PoseLandmarker, FilesetResolver } from "/mediapipe/tasks-vision/vision_bundle.js";
 
-			/* ---------- DOM ---------- */
 			const video = document.getElementById("video");
 			const canvas = document.getElementById("canvas");
 			const ctx = canvas.getContext("2d");
 			const tip = document.getElementById("tip");
 
-			/* ---------- 状态 ---------- */
 			let poseLandmarker = null;
 			let running = false;
 			let facingMode = "user";
 
-			/* ---------- FPS & Performance ---------- */
-			let dynamicScale = 0.5; 
-			let frameCount = 0;
-			let lastFpsCheck = 0;
-
-			/* ================= 1. 摄像头启动 (优先) ================= */
+			/* ================= 1. 摄像头启动 (返回 Promise) ================= */
 			async function startCamera() {
-				tip.textContent = "Camera loading...";
-
 				if (video.srcObject) {
 					video.srcObject.getTracks().forEach(t => t.stop());
 				}
 
 				try {
 					const stream = await navigator.mediaDevices.getUserMedia({
-						video: {
-							facingMode,
-							width: { ideal: 1280 },
-							height: { ideal: 720 }
-						}
+						video: { facingMode, width: { ideal: 1280 }, height: { ideal: 720 } }
 					});
 
 					video.srcObject = stream;
 
-					// 核心修改：等待元数据加载，立即显示画面
 					return new Promise((resolve) => {
 						video.onloadedmetadata = () => {
 							video.play();
@@ -115,7 +60,7 @@
 							canvas.classList.toggle("mirror", mirror);
 
 							running = true; 
-							tip.textContent = "Camera OK, loading AI...";
+							console.log("Camera hardware ready.");
 							resolve();
 						};
 					});
@@ -124,13 +69,10 @@
 				}
 			}
 
-			/* ================= 2. AI 初始化 (异步) ================= */
+			/* ================= 2. AI 初始化 (独立运行) ================= */
 			async function initAI() {
 				try {
-					const vision = await FilesetResolver.forVisionTasks(
-						"/mediapipe/tasks-vision/wasm"
-					);
-
+					const vision = await FilesetResolver.forVisionTasks("/mediapipe/tasks-vision/wasm");
 					poseLandmarker = await PoseLandmarker.createFromOptions(vision, {
 						baseOptions: {
 							modelAssetPath: "/mediapipe/model/pose_landmarker_lite.task",
@@ -139,164 +81,90 @@
 						runningMode: "VIDEO",
 						numPoses: 1
 					});
-
+					console.log("AI Model ready.");
 					tip.textContent = "AI Ready";
 				} catch (err) {
+					console.error("AI Init Error:", err);
 					tip.textContent = "AI Load Failed";
-					console.error(err);
 				}
 			}
 
-			/* ================= 3. 主循环 (解耦检测与渲染) ================= */
+			/* ================= 3. 主渲染循环 ================= */
 			function loop(ts) {
 				requestAnimationFrame(loop);
 				if (!running) return;
 
-				// 清除画布（注意：video 会在底层自动渲染，canvas 只负责画线）
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-				// 如果 AI 还没好，直接跳过 AI 计算，保持视频播放
+				// 如果 AI 还没加载完，loop 照常运行，但只跳过检测
 				if (!poseLandmarker) return;
 
-				// 性能监控
-				frameCount++;
-				if (ts - lastFpsCheck > 1000) {
-					const fps = frameCount;
-					if (fps < 12 && dynamicScale > 0.3) dynamicScale -= 0.1;
-					else if (fps > 14 && dynamicScale < 1.0) dynamicScale += 0.1;
-					
-					tip.textContent = `Quality: ${Math.round(dynamicScale * 100)}% | FPS: ${fps}`;
-					frameCount = 0;
-					lastFpsCheck = ts;
-				}
-
-				// AI 姿态识别
 				const result = poseLandmarker.detectForVideo(video, ts);
 				if (result.landmarks && result.landmarks.length > 0) {
 					drawPose(result.landmarks[0]);
 				}
 			}
 
-			/* ================= 绘制函数 ================= */
+			/* ================= 4. 骨骼绘制 ================= */
 			function drawPose(lm) {
 				ctx.save();
 				ctx.strokeStyle = "#00ff7f";
 				ctx.fillStyle = "#ffffff";
 				ctx.lineWidth = 3;
 				ctx.lineCap = "round";
-				ctx.lineJoin = "round";
-
+				
 				const bones = [
 					[11, 13], [13, 15], [12, 14], [14, 16],
 					[23, 25], [25, 27], [24, 26], [26, 28],
 					[11, 12], [23, 24], [11, 23], [12, 24]
 				];
 
-				bones.forEach(([a, b]) => drawLine(toCanvas(lm[a]), toCanvas(lm[b])));
-				lm.forEach(p => drawPoint(toCanvas(p)));
+				bones.forEach(([a, b]) => {
+					const start = { x: lm[a].x * canvas.width, y: lm[a].y * canvas.height };
+					const end = { x: lm[b].x * canvas.width, y: lm[b].y * canvas.height };
+					ctx.beginPath();
+					ctx.moveTo(start.x, start.y);
+					ctx.lineTo(end.x, end.y);
+					ctx.stroke();
+				});
 
-				drawAngle(lm[11], lm[13], lm[15]); 
-				drawAngle(lm[12], lm[14], lm[16]); 
-				drawAngle(lm[23], lm[25], lm[27]); 
-				drawAngle(lm[24], lm[26], lm[28]); 
-
+				lm.forEach(p => {
+					ctx.beginPath();
+					ctx.arc(p.x * canvas.width, p.y * canvas.height, 3, 0, Math.PI * 2);
+					ctx.fill();
+				});
 				ctx.restore();
 			}
 
-			function toCanvas(p) {
-				return { x: p.x * canvas.width, y: p.y * canvas.height };
-			}
+			/* ================= 5. 并行启动逻辑 ================= */
+			async function main() {
+				tip.textContent = "Loading...";
 
-			function drawLine(a, b) {
-				if (!a || !b) return;
-				ctx.beginPath();
-				ctx.moveTo(a.x, a.y);
-				ctx.lineTo(b.x, b.y);
-				ctx.stroke();
-			}
+				// 同时启动两个异步任务，不使用 await 互相阻塞
+				const cameraTask = startCamera();
+				const aiTask = initAI();
 
-			function drawPoint(p) {
-				ctx.beginPath();
-				ctx.arc(p.x, p.y, 3, 0, Math.PI * 2);
-				ctx.fill();
-			}
-
-			function calcAngle(a, b, c) {
-				const ab = { x: a.x - b.x, y: a.y - b.y };
-				const cb = { x: c.x - b.x, y: c.y - b.y };
-				const dot = ab.x * cb.x + ab.y * cb.y;
-				const mag1 = Math.hypot(ab.x, ab.y);
-				const mag2 = Math.hypot(cb.x, cb.y);
-				return Math.acos(dot / (mag1 * mag2)) * 180 / Math.PI;
-			}
-
-			function drawAngle(a, b, c) {
-				if(!a || !b || !c) return;
-				const angle = Math.round(calcAngle(a, b, c));
-				const p = toCanvas(b);
-				ctx.font = "12px monospace";
-				ctx.fillText(`${angle}°`, p.x + 6, p.y - 6);
-			}
-
-			/* ================= 录制与 Flutter 交互 ================= */
-			let mediaRecorder;
-			let recordedChunks = [];
-			let startTime;
-
-			window.startRecord = function() {
-				recordedChunks = [];
-				startTime = Date.now();
-				mediaRecorder = new MediaRecorder(video.srcObject);
-				mediaRecorder.ondataavailable = e => recordedChunks.push(e.data);
-				mediaRecorder.start();
-			};
-
-			window.pauseRecord = function() {
-				if (!mediaRecorder) return;
-				mediaRecorder.state === "recording" ? mediaRecorder.pause() : mediaRecorder.resume();
-			};
-
-			window.stopAndUpload = async function(uploadUrl, token) {
-				if (!mediaRecorder) return;
-				mediaRecorder.onstop = async () => {
-					const duration = (Date.now() - startTime) / 1000;
-					const blob = new Blob(recordedChunks, { type: mediaRecorder.mimeType });
-					const formData = new FormData();
-					const ext = mediaRecorder.mimeType.includes("mp4") ? "mp4" : "webm";
-					formData.append("file", blob, `record_${Date.now()}.${ext}`);
-					formData.append("duration", duration);
-
-					try {
-						const response = await fetch(uploadUrl, { method: "POST", body: formData });
-						window.flutter_inappwebview.callHandler("onUploadComplete", {
-							success: response.ok,
-							status: response.status,
-							duration: duration
-						});
-					} catch (err) {
-						window.flutter_inappwebview.callHandler("onUploadComplete", { success: false, error: err.message });
+				// 只要摄像头任务先完成，立即启动 loop 展现画面
+				cameraTask.then(() => {
+					requestAnimationFrame(loop);
+					if (!poseLandmarker) {
+						tip.textContent = "AI Loading in background...";
 					}
-				};
-				mediaRecorder.stop();
-			};
+				});
 
+				// 等待所有任务完成（如果需要做整体 Ready 状态处理）
+				await Promise.all([cameraTask, aiTask]);
+				tip.textContent = "System Fully Ready";
+			}
+
+			main();
+
+			/* --- 其它接口 --- */
 			window.toggleCamera = async () => {
 				facingMode = facingMode === "user" ? "environment" : "user";
 				await startCamera();
 				return facingMode;
 			};
-
-			/* ================= 启动流程 ================= */
-			async function main() {
-				// 1. 先开摄像头并启动渲染循环
-				await startCamera();
-				requestAnimationFrame(loop);
-				// 2. 后台加载 AI，不阻塞画面
-				initAI();
-			}
-
-			main();
-			
 		</script>
 	</body>
 </html>
