--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				canvas.classList.toggle("mirror", mirror);
 
 				running = true;
+				requestAnimationFrame(loop);
 				tip.textContent = `Camera OK (${facingMode})`;
 			}
 
